--- a/projeto-portfolio/css/global.css
+++ b/projeto-portfolio/css/global.css
@@ -32,4 +32,13 @@ img {
   max-width: 4ch; /* valor do caractere 0 = vai tentar quebrar palavra deixando 4 letras em cada linha */
 }
 
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    text-transform: capitalize; /* aumenta somente a primeira letra*/
+    max-width: initial;
+  }
+
+}
+
 
